# safe-f411_STM32F411RE

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  safe-f411.sln
Core/Inc/: main.h
Core/Inc/app/: app.h  config.h
Core/Inc/common/: button_fsm.h  log.h  platform_gpio.h  platform_port.h
Core/Inc/rtos/: rtos_app.h  rtos_button.h  rtos_config.h  rtos_log_service.h  rtos_monitor.h  rtos_probe.h  (+1 more)
Core/Src/: freertos.c  gpio.c  main.c  syscalls.c
cmake/: vscode_generated.cmake
docs/: README.md
docs/core/: architecture.md  module_responsibility.md  project_overview.md  release_note.md  test_procedure.md  test_report.md  test_strategy.md
docs/supporting/: delivery_package.md  developer_guide.md  log_rule.md  test_judgement_rule.md  traceability.md  user_guide.md
firmware/: CMakeLists.txt
firmware/Core/Inc/: FreeRTOSConfig.h
firmware/Core/Inc/common/: button_fsm.h  platform_gpio.h  platform_port.h
firmware/Core/Inc/rtos/: rtos_log_service.h  rtos_monitor.h
firmware/Core/Inc/test/: test_config.h
firmware/Core/Inc/test/runtime/: test_baremetal_runner.h
firmware/Core/Inc/test/tc_00/: tc_001_debug_attach_reset.h  tc_002_clock_sanity.h
firmware/Core/Inc/test/tc_01/: tc_010_led_gpio.h  tc_011_button_polling.h
firmware/Core/Inc/test/tc_02/: tc_020_uart_sanity.h  tc_021_boot_log_format.h  tc_022_button_event_uart_mapping.h
firmware/Core/Inc/test/tc_03/: tc_030_timing_interval_accuracy_validation.h
firmware/Core/Inc/test/tc_04/: tc_040_button_bounce_bug_injection.h
firmware/Core/Inc/test/tc_05/: tc_051_long_press_one_shot_fix_validation.h
firmware/Core/Inc/test/tc_06/: tc_065_reset_recovery_observation.h  tc_066_fault_log_safe_state_validation.h
firmware/Core/Inc/test/tc_rtos/: tc_030_rtos.h
firmware/Core/Inc/test/verify/: toggle_verifier.h
firmware/Core/Src/: main.c  stm32f4xx_hal_timebase_tim.c  usart.c
firmware/Core/Src/app/: app.c
firmware/Core/Src/common/: platform_port.c
firmware/Core/Src/test/runtime/: test_baremetal_runner.c  test_timer.c
firmware/Core/Src/test/tc_01/: tc_013_long_press_toggle_once.c
firmware/Core/Src/test/tc_02/: tc_022_button_event_uart_mapping.c
firmware/Core/Src/test/tc_03/: tc_030_timing_interval_accuracy_validation.c  tc_032_cpu_load_impact_on_button_detection.c
firmware/Core/Src/test/tc_04/: tc_041_long_press_repeated_event_defect.c  tc_043_uart_event_overcount_cause.c
firmware/Core/Src/test/tc_05/: tc_050_debounce_fix_validation.c  tc_051_long_press_one_shot_fix_validation.c
firmware/Core/Src/test/tc_06/: tc_063_long_duration_stability_test.c  tc_064_power_cycle_recovery_validation.c  tc_066_fault_log_safe_state_validation.c
firmware/Core/Src/test/tc_rtos/: tc_032_rtos.c  tc_042_rtos.c
host-tool/: README.md
host-tool/SafeF411.HostTool/: MainForm.Designer.cs  MainForm.cs  Program.cs  SafeF411.HostTool.csproj
(+76 files in other folders)
